# openad-msgs

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
openad_control_msgs/: CMakeLists.txt  package.xml
openad_control_msgs/msg/: ThrottleCmd.msg
openad_monitor_msgs/: CMakeLists.txt  package.xml
openad_monitor_msgs/msg/: NodeState.msg
openad_vehicle_msgs/: CMakeLists.txt  package.xml
openad_vehicle_msgs/msg/: ThrottleMsg.msg
