<package format="3">
  <name>openad_monitor_msgs</name>
  <version>1.0.0</version>
  <description>OpenAD monitor message</description>
  <maintainer email="zhijie.yang@tum.de">Zhijie Yang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <!-- <build_depend>std_msgs</build_depend> -->

  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- <run_depend>std_msgs</run_depend> -->

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



